# gptinfo

./: Cargo.toml  README.md  build.rs
guid/: gen.py  guids.txt
src/: cli.rs  constants.rs  entry.rs  fmt.rs  guid.rs  header.rs  main.rs  partition.rs  reader.rs  table.rs
