[package]
authors = ["Safin Singh <safinsingh.dev@gmail.com>"]
edition = "2018"
name = "gptinfo"
version = "2.0.0"
license = "MPL-2.0"
description = "A CLI tool to analyze partition tables"
repository = "https://github.com/safinsingh/gptinfo"
readme = "README.md"
keywords = ["gpt", "partition-tables"]

[dependencies]
anyhow = "1.0.36"
byteorder = "1.3.4"
